// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Should increment the quantity 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductImage Should render correctly with the custom image 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
